# Ai-Subtitler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug-voice-gate.cmd  download-model-tiny-en.cmd  download-model-tiny-multilanguage.cmd  download-vad.cmd  list-devices.ps1  make-release.cmd  make-release.ps1  run.cmd  run.ps1  start-ai-subtitler-mic1.cmd  start-ai-subtitler-mic1.ps1  start-ai-subtitler.cmd
cmake/: FindSDL2.cmake
src/: main.cpp  streamerbot_ws_client.h  streamerbot_ws_client_winhttp.cpp
tools/: smoke_test_release_wrapper.ps1
